--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ lerna-debug.log*
 
 # IDE - VSCode
 .vscode/*
-!.vscode/settings.json
+!.vscode/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
