--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
 		"start:dev": "nest start --watch",
 		"start:dev:batch": "nest start housen-batch --watch",
 		"start:debug": "nest start --debug --watch",
-		"start:prod": "NODE_ENV=production node dist/apps/housen-api/main.js",
-		"start:prod:batch": "node dist/apps/housen-batch/main",
+		"start:prod": "NODE_ENV=production node dist/apps/housen-api/main",
+		"start:prod:batch": "NODE_ENV=production node dist/apps/housen-batch/main",
 		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
 		"test": "jest",
 		"test:watch": "jest --watch",
