--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"private": true,
 	"license": "ITC",
 	"scripts": {
-		"build": "nest build",
+		"build": "nest build housen-api && nest build housen-batch",
 		"format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
 		"start": "nest start",
 		"start:dev": "nest start --watch",
