--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"graphql-upload": "^13.0.0",
 		"moment": "^2.29.4",
 		"mongoose": "^8.0.0",
+		"openai": "^6.15.0",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^7.8.1",
 		"uuid": "^8.3.2",
