--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,15 @@
 version: '3.3'
 
 services:
+  ollama:
+    image: ollama/ollama
+    container_name: ollama
+    restart: unless-stopped
+    volumes:
+      - ollama:/root/.ollama
+    networks:
+      - monorepo-network
   housen-api:
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     container_name: housen-api
     restart: always
     image: node:20.10.0
@@ -16,6 +22,8 @@ services:
     working_dir: /usr/src/housen
     networks:
       - monorepo-network
+    depends_on:
+      - ollama
     command: bash -c "rm -rf dist && npm install && npm run build && npm run start:prod"
 
   housen-batch:
@@ -30,7 +38,8 @@ services:
     networks:
       - monorepo-network
     command: bash -c "npm install && npm run build && npm run start:prod:batch"
-
+volumes:
+  ollama:
 networks:
   monorepo-network:
     driver: bridge
